Fix gap of palettes

--- a/src/pages/Palettes.module.scss
+++ b/src/pages/Palettes.module.scss
@@ -84,6 +84,7 @@
       flex-wrap: wrap;
       flex-grow: 1;
       gap: 50px;
+      row-gap: 20px;
     }
 
     .load-more {
@@ -104,9 +105,6 @@
   .container {
     .tabs {
       .palettes {
-        padding: {
-          top: 50px;
-        }
         .empty {
           margin-top: -50px;
         }
